--- a/dshop/templates/theme/default/print/invoice.html
+++ b/dshop/templates/theme/default/print/invoice.html
@@ -1,4 +1,4 @@
-{% extends "dshop/print/base.html" %}
+{% extends "theme/default/print/base.html" %}
 {% load static i18n shop_tags %}
 
 {% block title %}{% trans "Invoice" %} {{ order.get_number }}{% endblock %}
