--- a/dshop/templates/theme/default/plugins/bloc-textmedia.html
+++ b/dshop/templates/theme/default/plugins/bloc-textmedia.html
@@ -1,45 +1,62 @@
 {% load static thumbnail cms_tags i18n %}
 
 <!-- ABOUT SECTION START -->
-<section class="about-section pt180 pb180 pt-md-180 pb-md-100 pt-sm-100">
+<section class="about-section section-textmedia py-5">
   <div class="container">
     <div class="row">
-      {% if instance.image and instance.colposition == 0 %}
-        <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInLeft animated">
-          <div class="about-image">
-            {% thumbnail instance.image "398x531" crop="scale" as thumb %}
-            <img src="{{thumb.url}}" alt="" class="img-fluid">
-          </div>
+      {% if instance.video and instance.colposition == 0 %}
+      <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInLeft animated">
+        <video controls preload width="585" height="300">
+            {% with instance.video.extension as ext %}
+            <source src="{{instance.video.url}}" type="video/{{ext}}" />
+            {% endwith %}
+        </video>
+      </div>
+      {% elif instance.image and instance.colposition == 0 %}
+      <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInLeft animated">
+        <div class="about-image">
+          {% thumbnail instance.image "398x531" crop="scale" as thumb %}
+          <img src="{{thumb.url}}" alt="" class="img-fluid">
         </div>
+      </div>
       {% endif %}
-      <div class="{% if instance.image %}col-xl-6 col-lg-6 col-md-12{% else %}col-12{% endif %} mb-md-75 mb-sm-50 wow {% if instance.colposition == 0 %}fadeInRight{% else %}fadeInLeft{% endif %} animated">
+      <div
+        class="{% if instance.image or instance.video %}col-xl-6 col-lg-6 col-md-12{% else %}col-12{% endif %} mb-md-75 mb-sm-50 wow {% if instance.colposition == 0 %}fadeInRight{% else %}fadeInLeft{% endif %} animated">
         {% if instance.title or instance.subtitle %}
-          <div class="title-bl">
-            {% if instance.title %}
-              <div class="title">
-                {{instance.title}}
-              </div>
-            {% endif %}
-            {% if instance.subtitle %}
-              <div class="subtitle color-5">
-                {{instance.subtitle}}
-              </div>
-            {% endif %}
+        <div class="title-bl">
+          {% if instance.title %}
+          <div class="title">
+            {{instance.title}}
           </div>
+          {% endif %}
+          {% if instance.subtitle %}
+          <div class="subtitle color-5">
+            {{instance.subtitle}}
+          </div>
+          {% endif %}
+        </div>
         {% endif %}
         <div class="mt50">
           {% if instance.text %}
-            {{instance.text}}
+          {{instance.text}}
           {% endif %}
         </div>
       </div>
-      {% if instance.image and instance.colposition == 1 %}
-        <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInRight animated">
-          <div class="about-image">
-            {% thumbnail instance.image "398x531" crop="scale" as thumb %}
-            <img src="{{thumb.url}}" alt="" class="img-fluid">
-          </div>
+      {% if instance.video and instance.colposition == 1 %}
+      <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInRight animated">
+        <video controls preload width="585" height="300">
+            {% with instance.video.extension as ext %}
+            <source src="{{instance.video.url}}" type="video/{{ext}}" />
+            {% endwith %}
+        </video>
+      </div>
+      {% elif instance.image and instance.colposition == 1 %}
+      <div class="col-xl-6 col-lg-6 col-md-12 wow fadeInRight animated">
+        <div class="about-image">
+          {% thumbnail instance.image "398x531" crop="scale" as thumb %}
+          <img src="{{thumb.url}}" alt="" class="img-fluid">
         </div>
+      </div>
       {% endif %}
     </div>
   </div>
