fix wrong discount with discounted_price

--- a/dshop/templates/theme/default/catalog/product-detail.html
+++ b/dshop/templates/theme/default/catalog/product-detail.html
@@ -3,6 +3,8 @@
 
 {% block title %}{{ product.product_name }}{% endblock %}
 
+{% block meta-description %}{{ product.caption|striptags|truncatechars:150 }}{% endblock %}
+
 {% block breadcrumb %}{% endblock %}
 
 {% block main-content %}
