fix discounts discounted price and promocodes

--- a/dshop/static/dshop/shopwise/css/style.css
+++ b/dshop/static/dshop/shopwise/css/style.css
@@ -5034,6 +5034,33 @@ footer .widget_title {
 	margin-right: 5px;
 	margin-left: 3px;
 }
+.product_price .product_sale_discounted{
+    background-color: #fff;
+    border: 1px solid #458d92;
+    color: #458d92;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 100%;
+    text-transform: uppercase;
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    padding: 5px 18px 4px;
+}
+.product_title .product-detail-discounted{
+    background-color: #fff;
+    border: 1px solid #458d92;
+    color: #458d92;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 100%;
+    text-transform: uppercase;
+    vertical-align: super;
+    display: inline-block;
+    padding: 3px 10px 1px;
+    margin: 0 0 0 10px;
+}
 .product-price del {
 	margin-left: 5px;
 	color: #919191;
