--- a/dshop/templates/theme/default/catalog/productdefault-detail.html
+++ b/dshop/templates/theme/default/catalog/productdefault-detail.html
@@ -76,7 +76,7 @@
           <div class="col-lg-6 col-md-6">
             <div class="pr_detail">
               <div class="product_description">
-                <h4 class="product_title">{% render_model product "product_name" %}</h4>
+                <h4 class="product_title">{% render_model product "product_name" %}{% if product.is_discounted %}<span class="product-detail-discounted">{% trans "Discounted" %}</span>{% endif %}</h4>
                 <div class="product_price">
                     {% product_discount_price product.id as real_price %}
                     <span class="price">{{real_price}}</span>
@@ -179,6 +179,9 @@
                           {% if real_price != related.unit_price %}
                             <del>{{related.unit_price}}</del>
                           {% endif %}
+                        {% endif %}
+                        {% if related.is_discounted %}
+                          <span class="product_sale_discounted">{% trans "Discounted" %}</span>
                         {% endif %}
                       </div>
                     </div>
