--- a/dshop/templates/theme/default/pages/produits.html
+++ b/dshop/templates/theme/default/pages/produits.html
@@ -135,6 +135,9 @@
                           <del>{{product.unit_price}}</del>
                         {% endif %}
                       {% endif %}
+                      {% if product.is_discounted %}
+                        <span class="product_sale_discounted">{% trans "Discounted" %}</span>
+                      {% endif %}
                     </div>
                     <div class="pr_desc">
                       <p>{{product.caption}}</p>
