--- a/dshop/templates/theme/default/plugins/products-by-category.html
+++ b/dshop/templates/theme/default/plugins/products-by-category.html
@@ -84,6 +84,9 @@
                               <del>{{product.unit_price}}</del>
                             {% endif %}
                           {% endif %}
+                          {% if product.is_discounted %}
+                            <span class="product_sale_discounted">{% trans "Discounted" %}</span>
+                          {% endif %}
                         </div>
                       </div>
                     </div>
