--- a/dshop/templates/theme/default/pages/contact.html
+++ b/dshop/templates/theme/default/pages/contact.html
@@ -10,7 +10,7 @@
     <div class="row justify-content-center">
       {% if contacts.address %}
         <div class="col-xl-4 col-md-12">
-            <div class="contact_wrap contact_style3">
+            <div class="contact_wrap contact_style3 contact-same-height">
             <div class="contact_icon">
                 <i class="linearicons-map2"></i>
             </div>
@@ -23,7 +23,7 @@
       {% endif %}
       {% if contacts.email %}
       <div class="col-xl-4 col-md-6">
-        <div class="contact_wrap contact_style3">
+        <div class="contact_wrap contact_style3 contact-same-height">
           <div class="contact_icon">
             <i class="linearicons-envelope-open"></i>
           </div>
@@ -40,7 +40,7 @@
       {% endif %}
       {% if contacts.phone %}
       <div class="col-xl-4 col-md-6">
-        <div class="contact_wrap contact_style3">
+        <div class="contact_wrap contact_style3 contact-same-height">
           <div class="contact_icon">
             <i class="linearicons-tablet2"></i>
           </div>
