--- a/dshop/templates/theme/default/plugins/products-vedette.html
+++ b/dshop/templates/theme/default/plugins/products-vedette.html
@@ -1,7 +1,7 @@
  {% load static thumbnail cms_tags i18n dshop_tags dmrabais_tags %}
 
 <!-- BEGIN: en vedette -->
-  <section class="section-vedette">
+  <section class="section-vedette py-5">
     <div class="container">
       {% if instance.title or instance.text %}
         <div class="row">
