--- a/templates/plugins/products-by-category.html
+++ b/templates/plugins/products-by-category.html
@@ -1,7 +1,7 @@
 {% load static thumbnail cms_tags i18n dshop_tags dmrabais_tags %}
 
 <!-- BEGIN: par catégorie -->
-<section class="section-parcategorie">
+<section class="section-parcategorie py-5">
   <div class="container mt-5 text-center">
     {% if instance.title or instance.text %}
       <div class="row">
