update sales plugin py

--- a/dshop/templates/theme/default/plugins/block-sales-parent.html
+++ b/dshop/templates/theme/default/plugins/block-sales-parent.html
@@ -1,6 +1,6 @@
 {% load static cms_tags %}
 
-<div class="section pb_20">
+<div class="section py-5">
   <div class="container">
     {% if instance.title or instance.text %}
       <div class="row text-center">
