--- a/templates/dshop/pages/base.html
+++ b/templates/dshop/pages/base.html
@@ -147,7 +147,7 @@
                   <ul class="widget_links">
                     <li><a href="/commande/profil/">{% trans 'Profile' %}</a></li>
                     <li><a href="{% page_url 'orders' %}">{% trans 'My Orders' %}</a></li>
-                    <li><a href="/commande/promocodes/">{% trans 'Promo Codes' %}</a></li>
+                    <!--<li><a href="/commande/promocodes/">{% trans 'Promo Codes' %}</a></li>-->
                   </ul>
                 </div>
               </div>
