--- a/dshop/templates/theme/default/order/detail.html
+++ b/dshop/templates/theme/default/order/detail.html
@@ -9,42 +9,53 @@
       <div class="d-flex align-items-center flex-wrap">
         <h4 class="text-nowrap">{% trans "Order" %} {{ data.number }}</h4>
         <div class="text-nowrap ml-3">{% trans "from" context "order-detail" %}
-          <span>{{ data.created_at|ts_to_str }}</span></div>
-        <div class="w-auto ml-auto lead badge badge-primary">
-          {% if data.status == 'Paid using Stripe' %}{% trans "Paid using Stripe" %}{% else %}{{data.status}}{% endif %}
+          <span>{{ data.created_at|ts_to_str }}</span>
         </div>
+        {% if data.status == 'Payment confirmed' or data.status == 'Paiement confirmé' %}
+            <div class="w-auto ml-auto lead badge badge-primary">
+                {{ data.status }}
+            </div>
+        {% else %}
+        <div class="w-auto ml-auto lead badge badge-secondary">
+            {% trans "Order Canceled" %}
+        </div>
+        {% endif %}
       </div>
       {% endblock %}
 
       {% block shop-order-delivery %}
-      <div class="row mb-3">
-        <div class="col-12 col-lg-6 my-2">
-          <div class="service-item item-content">
-            <div class="service-content-box text-left py-3 px-4">
-              <h5 class="service-title">{% trans "Shipping Address" %}</h5>
-              <div class="py-2 pl-1 pr-4">
-                <pre class="text-left">{{ data.shipping_address_text }}</pre>
-              </div>
-              <div class="text-primary">{% trans "Shipping Method" %}: {{ data.active_shipping_method.label }}</div>
+        <div class="row mb-3">
+            <div class="col-12 col-lg-6 my-2">
+                <div class="service-item item-content">
+                    <div class="service-content-box text-left py-3 px-4">
+                        <h5 class="service-title">{% trans "Shipping Address" %}</h5>
+                        <div class="py-2 pl-1 pr-4">
+                            <pre class="text-left">{{ data.shipping_address_text }}</pre>
+                        </div>
+                        <div class="text-primary">
+                            {% trans "Shipping Method" %}: {% if data.active_shipping_method.label %}{{ data.active_shipping_method.label }}{% else %}-{% endif %}
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-12 col-lg-6 my-2">
-          <div class="service-item item-content">
-            <div class="service-content-box text-left py-3 px-4">
-              <h5 class="service-title">{% trans "Billing Address" %}</h5>
-              <div class="py-2 pl-1 pr-4">
-                <pre class="text-left pa-2">{{ data.billing_address_text }}</pre>
-              </div>
-              <div class="text-primary">{% trans "Payment Method" %}: {{ data.active_payment_method.label }}</div>
+            <div class="col-12 col-lg-6 my-2">
+                <div class="service-item item-content">
+                    <div class="service-content-box text-left py-3 px-4">
+                        <h5 class="service-title">{% trans "Billing Address" %}</h5>
+                        <div class="py-2 pl-1 pr-4">
+                            <pre class="text-left pa-2">{{ data.billing_address_text }}</pre>
+                        </div>
+                        <div class="text-primary">
+                            {% trans "Payment Method" %}: {% if data.active_payment_method.label %}{{ data.active_payment_method.label }}{% else %}-{% endif %}
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
       {% endblock %}
 
       {% block shop-order-head %}
-      <h4>{% trans "Ordered Items" %}</h4>
+        <h4>{% trans "Ordered Items" %}</h4>
       {% endblock shop-order-head %}
 
       {% block shop-order-body %}
