--- a/dshop/templates/theme/default/catalog/productdefault-detail.html
+++ b/dshop/templates/theme/default/catalog/productdefault-detail.html
@@ -157,6 +157,8 @@
                         {% if related.main_image %}
                           {% thumbnail related.main_image 540x600 crop upscale as thumb %}
                           <img src="{{thumb.url}}" alt="product_img1" />
+                        {% else %}
+                            <img src="https://via.placeholder.com/540x600/ececec/ececec" alt="{{related.product_name}}" />
                         {% endif %}
                       </a>
                       <div class="product_action_box">
