--- a/dshop/templates/theme/default/catalog/productvariable-detail.html
+++ b/dshop/templates/theme/default/catalog/productvariable-detail.html
@@ -98,7 +98,11 @@
                   {% endif %}
                 </div>
                 <div class="pr_desc">
-                  {{product.caption|safe}}
+                    {% if product.caption %}
+                        {{product.caption|safe}}
+                    {% elif product.description %}
+                        {{product.description|safe}}
+                    {% endif %}
                 </div>
               </div>
               <hr />
